--- a/manifest.yml
+++ b/manifest.yml
@@ -1,16 +1,9 @@
----
-declared-services:
-  wcsi-conversation-service:
-    label: conversation
-    plan: free
 applications:
-- name: covid19assistant
-  command: npm start
-  path: .
-  memory: 256M
-  instances: 1
-  services:
-  - wcsi-conversation-service
-  env:
-    NPM_CONFIG_PRODUCTION: false
-  buildpack: sdk-for-nodejs
+    - path: .
+      memory: 256M
+      instances: 1
+      domain: mybluemix.net
+      name: covid19assistant
+      host: covid19assistant
+      disk_quota: 1024M
+      buildpack: sdk-for-nodejs
